[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flipper-fs"
dynamic = ["version"]
description = "Flipper Zero filesystem operations via serial CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andre Miras"}
]
urls = {Homepage = "https://github.com/AndreMiras/flipper-fs.py", "Bug Reports" = "https://github.com/AndreMiras/flipper-fs.py/issues", Source = "https://github.com/AndreMiras/flipper-fs.py", Documentation = "https://github.com/AndreMiras/flipper-fs.py#readme"}
keywords = ["flipper", "zero", "filesystem", "serial", "cli", "storage", "embedded"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pip-tools>=7.0.0",
]

[tool.setuptools]
packages = ["flipperfs", "flipperfs.extras"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools_scm]
# PyPI-compatible versioning (no local version identifiers)
local_scheme = "no-local-version"
